--- a/Flask/MyStore/templates/base.html
+++ b/Flask/MyStore/templates/base.html
@@ -10,7 +10,9 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/static/images/logo.png" alt="TechShop Logo">
+            <a href='/'>
+                <img src="https://static.vecteezy.com/system/resources/thumbnails/006/298/276/small/gear-smart-eps-icon-digital-tech-business-logo-free-vector.jpg" alt="TechShop Logo">
+            </a>
             <span>TechShop</span>
         </div>
         <a href="/cabinet" class="cabinet-link">Личный кабинет</a>
@@ -46,17 +48,17 @@
         {% block content %}{% endblock %}
     </main>
     <footer>
-        <p>Автор: Ваше Имя</p>
+        <p>Автор: Владислав Сунгуров 10г</p>
         <div class="sponsors">
             <div class="column">
-                <img src="/static/images/sponsor1.png" alt="Sponsor 1">
-                <img src="/static/images/sponsor2.png" alt="Sponsor 2">
-                <img src="/static/images/sponsor3.png" alt="Sponsor 3">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Google_%22G%22_logo.svg/768px-Google_%22G%22_logo.svg.png" alt="Google">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/d/de/Amazon_icon.png" alt="Amazon">
+                <img src="https://img.icons8.com/color/600/ozon.png" alt="Ozon">
             </div>
             <div class="column">
-                <img src="/static/images/sponsor4.png" alt="Sponsor 4">
-                <img src="/static/images/sponsor5.png" alt="Sponsor 5">
-                <img src="/static/images/sponsor6.png" alt="Sponsor 6">
+                <img src="https://images.shoutwiki.com/jojoss/7/7d/Unit_Speedwagon_%28R%29.png" alt="Speedwagon">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/7/75/Max_logo_2025.png" alt="Max">
+                <img src="https://a.espncdn.com/i/teamlogos/nba/500-dark/chi.png" alt="Chicago Bulls">
             </div>
         </div>
         <a href="https://t.me/techshop">Telegram канал</a>
