--- a/Flask/MyStore/templates/index.html
+++ b/Flask/MyStore/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <section class="articles">
     <article class="article1">
-        <img src="/static/images/article1.jpg" alt="Article 1">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Icon-round-Question_mark.svg/1200px-Icon-round-Question_mark.svg.png" alt="Article 1">
         <div>
             <h2>Почему выбрать TechShop</h2>
             <p>Мы предлагаем лучшие товары по доступным ценам.</p>
