--- a/Flask/TechStore/templates/product.html
+++ b/Flask/TechStore/templates/product.html
@@ -4,10 +4,12 @@
 {% block content %}
 <div class="product-detail">
     <div class="gallery">
-        {% for img in prod.images %}
-        <input type="radio" id="img{{ loop.index }}" name="gallery" {% if loop.first %}checked{% endif %}>
-        <label for="img{{ loop.index }}">&#9679;</label>
-        {% endfor %}
+        <div class="gallery-nav">
+            {% for img in prod.images %}
+            <input type="radio" id="img{{ loop.index }}" name="gallery" {% if loop.first %}checked{% endif %}>
+            <label for="img{{ loop.index }}">&#9679;</label>
+            {% endfor %}
+        </div>
         {% for img in prod.images %}
         <img src="{{ img }}" alt="{{ prod.name }} {{ loop.index }}" class="gallery-img">
         {% endfor %}
